# Liquidation-Engine

./: .gitignore  DEPLOYMENT_GUIDE.md  PROJECT_SUMMARY.md  README.md  SETUP_INSTRUCTIONS.md
anchor/: Anchor.toml  Cargo.toml  calc_discriminator.js  package-lock.json  package.json
anchor/programs/liquidation_engine/: Cargo.toml
anchor/programs/liquidation_engine/src/: lib.rs
anchor/scripts/: create_test_position.ts
anchor/tests/: check_position.ts  create_position.ts  init_if.ts  liquidation_engine.ts  test_liquidation.ts
backend/: .env.example  Cargo.toml  DATABASE_SETUP.md
backend/src/: db.rs  executor.rs  insurance.rs  main.rs  monitor.rs  oracle.rs  queue.rs  server.rs  tests.rs  websocket.rs
database/: schema.sql
deliverables/: 1_SYSTEM_ARCHITECTURE.md  2_LIQUIDATION_MECHANICS.md  3_SMART_CONTRACT.md  4_BACKEND_SERVICE.md  5_OPERATIONAL_GUIDE.md
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  LIQUIDATION_MECHANICS.md  PERFORMANCE.md  TEST_RESULTS.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/insurance/: page.tsx
frontend/src/app/markets/: page.tsx
frontend/src/app/positions/: page.tsx
frontend/src/components/: DashboardLayout.tsx  EventFeed.tsx  Header.tsx  KpiCard.tsx  Leaderboard.tsx  Navbar.tsx  QuickStats.tsx  RadarTable.tsx  Sidebar.tsx  SystemLog.tsx  TrendingMarkets.tsx  WalletContextProvider.tsx
frontend/src/hooks/: useBlockchainData.ts
frontend/src/lib/: api.ts  mockData.ts
(+5 files in other folders)
