[package]
name = "liquidation-engine-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "chrono", "offline"] }
redis = { version = "0.24", features = ["tokio-comp"] }
solana-client = "1.18"
solana-sdk = "1.18"
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
anyhow = "1.0"
futures = "0.3.30"
rand = "0.8"
borsh = "0.9"
actix-web = "4.4"
actix-cors = "0.6"
actix-ws = "0.2"
tokio-stream = "0.1"
